--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -50,9 +50,9 @@ $transition-fade: opacity 0.15s linear !default;
 
 // Components
 
-$border-radius: 0px !default;
-$border-radius-lg: 0px !default;
-$border-radius-sm: 0px !default;
+$border-radius: 0 !default;
+$border-radius-lg: 0 !default;
+$border-radius-sm: 0 !default;
 
 // Fonts
 
