--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -25,7 +25,7 @@
 html,
 body {
   min-height: 100%;
-  background-color: #fafafa;
+  background-color: #ebebeb;
 }
 
 .mtb-10vh {
@@ -113,24 +113,37 @@ body {
 }
 
 .main {
+  position: relative;
   margin-left: 200px;
-  display: flex;
-  min-height: 80vh;
-  padding: 45px 30px;
+  min-height: 100vh;
+  padding: 2rem;
 }
 
 .loading {
-  width: 100%;
-  height: 50vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   display: flex;
   justify-content: center;
+  background: #ffffff;
+  z-index: 999;
+  opacity: 1;
+  transition: opacity 1s ease;
+}
+
+.noLoading {
+  opacity: 0;
 }
 
 /* fade animation start */
+.fade-leave-active,
 .fade-enter-active {
-  transition: opacity 1s;
+  transition: opacity 0.5s;
 }
 
+.fade-leave-to,
 .fade-enter {
   opacity: 0;
 }
