--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -136,6 +136,29 @@ $sizes: map-merge(
   $sizes
 );
 
+$spacer: 1rem !default;
+$spacers: () !default;
+$spacers: map-merge(
+  (
+    6: (
+      $spacer * 4
+    ),
+    7: (
+      $spacer * 5
+    ),
+    8: (
+      $spacer * 6.25
+    ),
+    9: (
+      $spacer * 7.5
+    ),
+    10: (
+      $spacer * 9.375
+    )
+  ),
+  $spacers
+);
+
 // Modals
 $modal-backdrop-bg: $dark !default;
 $modal-header-border-color: $gray-200 !default;
