--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
@@ -6,4 +5,25 @@
 @import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap.scss';
+@import "~bootstrap/scss/bootstrap.scss";
+
+// Sweetalert
+@import "~sweetalert2/src/variables";
+
+// Box-model
+$swal2-border-radius: none;
+
+// Toast
+$swal2-toast-border: none;
+
+// Button
+$swal2-confirm-button-border-radius: 0;
+$swal2-cancel-button-border-radius: 0;
+$swal2-confirm-button-background-color: #008cba !important;
+$swal2-cancel-button-background-color: #f04124 !important;
+
+// Animation
+$swal2-show-animation: none;
+$swal2-hide-animation: none;
+
+@import "~sweetalert2/src/sweetalert2";
