--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,14 +11,14 @@
 @import "~sweetalert2/src/variables";
 
 // Box-model
-$swal2-border-radius: none;
+//$swal2-border-radius: none;
 
 // Toast
 $swal2-toast-border: none;
 
 // Button
-$swal2-confirm-button-border-radius: 0;
-$swal2-cancel-button-border-radius: 0;
+//$swal2-confirm-button-border-radius: 0;
+//$swal2-cancel-button-border-radius: 0;
 $swal2-confirm-button-background-color: $primary !important;
 $swal2-cancel-button-color: $black !important;
 $swal2-cancel-button-background-color: $secondary !important;
